--- a/views/list.ejs
+++ b/views/list.ejs
@@ -1,19 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
+<%- include('partials/header') %>
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>To do list</title>
-    <link rel="stylesheet" href="css/styles.css">
-</head>
-
-<body>
     <div class="box" id="heading">
         <h1>
             <%= listvalue %>
         </h1>
-
     </div>
 
     <div class="box">
@@ -36,6 +26,4 @@
                 </form>
     </div>
 
-</body>
-
-</html>
+<%- include('partials/header') %>
