--- a/publlic/css/styles.css
+++ b/publlic/css/styles.css
@@ -90,7 +90,16 @@ html {
   }
   
   footer {
-    color: white;
+    color: black;
     color: rgba(0, 0, 0, 0.5);
     text-align: center;
+  }
+
+  .footer
+  {
+    text-align: center;
+    width: 100%;
+    font-family: 'helvetica neue';
+    font-size: 1.1rem;
+    font-weight: 500;
   }
